Closed Bug 1802943 Opened 1 year ago Closed 1 year ago

Perma bd [tier 2] /builds/worker/checkouts/gecko/dom/media/webaudio/blink/DenormalDisabler.h:82:5: error: use of undeclared identifier 'memset'

Categories

(Core :: Web Audio, defect, P5)

defect

Tracking

()

RESOLVED FIXED
109 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox107 --- unaffected
firefox108 --- unaffected
firefox109 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: karogyoker2+debbug)

References

(Regression)

Details

(Keywords: intermittent-failure, regression)

Attachments

(1 file)

Filed by: sstanca [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=397921688&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/SJq0yVBXTK2kD7Ipa_omLA/runs/0/artifacts/public/logs/live_backing.log


[task 2022-11-28T16:53:46.743Z] 16:53:46     INFO -  In file included from /builds/worker/workspace/obj-build/dist/include/mozilla/dom/HTMLMediaElement.h:17:
[task 2022-11-28T16:53:46.743Z] 16:53:46     INFO -  In file included from /builds/worker/workspace/obj-build/dist/include/TelemetryProbesReporter.h:10:
[task 2022-11-28T16:53:46.743Z] 16:53:46  WARNING -  /builds/worker/workspace/obj-build/dist/include/mozilla/AwakeTimeStamp.h:103:3: warning: 'dllimport' attribute ignored on inline function [-Wignored-attributes]
[task 2022-11-28T16:53:46.744Z] 16:53:46     INFO -    MFBT_API bool operator!=(const AwakeTimeDuration& aOther) const {
[task 2022-11-28T16:53:46.744Z] 16:53:46     INFO -    ^
[task 2022-11-28T16:53:46.745Z] 16:53:46     INFO -  /builds/worker/workspace/obj-build/dist/include/mozilla/Types.h:101:24: note: expanded from macro 'MFBT_API'
[task 2022-11-28T16:53:46.745Z] 16:53:46     INFO -  #      define MFBT_API MOZ_IMPORT_API
[task 2022-11-28T16:53:46.745Z] 16:53:46     INFO -                         ^
[task 2022-11-28T16:53:46.746Z] 16:53:46     INFO -  /builds/worker/workspace/obj-build/dist/include/mozilla/Types.h:63:39: note: expanded from macro 'MOZ_IMPORT_API'
[task 2022-11-28T16:53:46.746Z] 16:53:46     INFO -  #    define MOZ_IMPORT_API __declspec(dllimport)
[task 2022-11-28T16:53:46.746Z] 16:53:46     INFO -                                        ^
[task 2022-11-28T16:53:46.747Z] 16:53:46     INFO -  17 warnings generated.
[task 2022-11-28T16:53:46.747Z] 16:53:46     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/dom/html'
[task 2022-11-28T16:53:46.748Z] 16:53:46     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/dom/media/webaudio/blink'
[task 2022-11-28T16:53:46.748Z] 16:53:46     INFO -  dom/media/webaudio/blink/Unified_cpp_webaudio_blink1.o
[task 2022-11-28T16:53:46.749Z] 16:53:46     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/dom/media/webaudio/blink'
[task 2022-11-28T16:53:47.035Z] 16:53:47     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/dom/media/webaudio/blink'
[task 2022-11-28T16:53:47.038Z] 16:53:47     INFO -  /builds/worker/fetches/sccache/sccache /builds/worker/fetches/clang/bin/i686-w64-mingw32-clang++ -Qunused-arguments -std=gnu++17 -o Unified_cpp_webaudio_blink1.o -c  -I/builds/worker/workspace/obj-build/dist/stl_wrappers -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -ftrivial-auto-var-init=pattern -DDEBUG=1 -DUSE_SSE2 -DUNICODE -D_UNICODE -D_CRT_RAND_S -DCERT_CHAIN_PARA_HAS_EXTRA_FIELDS -D_SECURE_ATL -DCHROMIUM_BUILD -DU_STATIC_IMPLEMENTATION -DOS_WIN=1 -DWIN32 -D_WIN32 -D_WINDOWS -DWIN32_LEAN_AND_MEAN -DWINAPI_NO_BUNDLED_LIBRARIES -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -DSTATIC_EXPORTABLE_JS_API -I/builds/worker/checkouts/gecko/dom/media/webaudio/blink -I/builds/worker/workspace/obj-build/dom/media/webaudio/blink -I/builds/worker/workspace/obj-build/ipc/ipdl/_ipdlheaders -I/builds/worker/checkouts/gecko/ipc/chromium/src -I/builds/worker/checkouts/gecko/dom/media/webaudio -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/nss -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-build/mozilla-config.h -fno-sized-deallocation -fno-aligned-new -fms-extensions -fcrash-diagnostics-dir=/builds/worker/artifacts -D_HAS_EXCEPTIONS=0 -fno-exceptions -Wno-incompatible-ms-struct -mstackrealign -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pipe -g -gcodeview -O2 -fno-omit-frame-pointer -funwind-tables -Wall -Wbitfield-enum-conversion -Wdeprecated-this-capture -Wempty-body -Wformat-type-confusion -Wignored-qualifiers -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtype-limits -Wno-error=tautological-type-limit-compare -Wunreachable-code -Wunreachable-code-return -Wunused-but-set-parameter -Wno-invalid-offsetof -Wclass-varargs -Wempty-init-stmt -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wno-range-loop-analysis -Wc++2a-compat -Wenum-compare-conditional -Wenum-float-conversion -Wno-ambiguous-reversed-operator -Wno-error=deprecated -Wno-error=deprecated-anon-enum-enum-conversion -Wno-error=deprecated-enum-enum-conversion -Wno-error=deprecated-pragma -Wno-error=deprecated-this-capture -Wno-error=deprecated-volatile -Wcomma -Wimplicit-fallthrough -Wstring-conversion -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=free-nonheap-object -Wno-error=atomic-alignment -Wno-error=deprecated-builtins -Wno-unknown-pragmas -Wno-unused-function -Wno-conversion-null -Wno-switch -Wno-enum-compare -Wno-psabi -Wthread-safety -Wno-unknown-warning-option -fno-strict-aliasing -ffp-contract=off  -MD -MP -MF .deps/Unified_cpp_webaudio_blink1.o.pp   Unified_cpp_webaudio_blink1.cpp
[task 2022-11-28T16:53:47.040Z] 16:53:47     INFO -  In file included from Unified_cpp_webaudio_blink1.cpp:2:
[task 2022-11-28T16:53:47.041Z] 16:53:47     INFO -  In file included from /builds/worker/checkouts/gecko/dom/media/webaudio/blink/ZeroPole.cpp:31:
[task 2022-11-28T16:53:47.042Z] 16:53:47    ERROR -  /builds/worker/checkouts/gecko/dom/media/webaudio/blink/DenormalDisabler.h:82:5: error: use of undeclared identifier 'memset'
[task 2022-11-28T16:53:47.043Z] 16:53:47     INFO -      memset(&registerData, 0, sizeof(fxsaveResult));
[task 2022-11-28T16:53:47.044Z] 16:53:47     INFO -      ^
[task 2022-11-28T16:53:47.045Z] 16:53:47     INFO -  1 error generated.
[task 2022-11-28T16:53:47.045Z] 16:53:47    ERROR -  gmake[4]: *** [/builds/worker/checkouts/gecko/config/rules.mk:669: Unified_cpp_webaudio_blink1.o] Error 1
[task 2022-11-28T16:53:47.046Z] 16:53:47     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/dom/media/webaudio/blink'
[task 2022-11-28T16:53:47.049Z] 16:53:47     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/dom/indexedDB'
[task 2022-11-28T16:53:47.049Z] 16:53:47     INFO -  dom/indexedDB/Unified_cpp_dom_indexedDB2.o
[task 2022-11-28T16:53:47.050Z] 16:53:47     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/dom/indexedDB'
[task 2022-11-28T16:53:47.329Z] 16:53:47     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/dom/media'
[task 2022-11-28T16:53:47.333Z] 16:53:47     INFO -  /builds/worker/fetches/sccache/sccache /builds/worker/fetches/clang/bin/i686-w64-mingw32-clang++ -Qunused-arguments -std=gnu++17 -o CubebUtils.o -c  -I/builds/worker/workspace/obj-build/dist/stl_wrappers -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -ftrivial-auto-var-init=pattern -DDEBUG=1 -DMOZILLA_INTERNAL_API -DTRACING -DUNICODE -D_UNICODE -D_CRT_RAND_S -DCERT_CHAIN_PARA_HAS_EXTRA_FIELDS -D_SECURE_ATL -DCHROMIUM_BUILD -DU_STATIC_IMPLEMENTATION -DOS_WIN=1 -DWIN32 -D_WIN32 -D_WINDOWS -DWIN32_LEAN_AND_MEAN -DWINAPI_NO_BUNDLED_LIBRARIES -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -DSTATIC_EXPORTABLE_JS_API -I/builds/worker/checkouts/gecko/dom/media -I/builds/worker/workspace/obj-build/dom/media -I/builds/worker/checkouts/gecko/caps -I/builds/worker/checkouts/gecko/docshell/base -I/builds/worker/checkouts/gecko/dom/base -I/builds/worker/checkouts/gecko/dom/media/webrtc -I/builds/worker/checkouts/gecko/layout/generic -I/builds/worker/checkouts/gecko/layout/xul -I/builds/worker/checkouts/gecko/media/libyuv/libyuv/include -I/builds/worker/checkouts/gecko/netwerk/base -I/builds/worker/checkouts/gecko/toolkit/content/tests/browser -I/builds/worker/workspace/obj-build/ipc/ipdl/_ipdlheaders -I/builds/worker/checkouts/gecko/ipc/chromium/src -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/nss -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-build/mozilla-config.h -fno-sized-deallocation -fno-aligned-new -fms-extensions -fcrash-diagnostics-dir=/builds/worker/artifacts -D_HAS_EXCEPTIONS=0 -fno-exceptions -Wno-incompatible-ms-struct -mstackrealign -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pipe -g -gcodeview -O2 -fno-omit-frame-pointer -funwind-tables -Wall -Wbitfield-enum-conversion -Wdeprecated-this-capture -Wempty-body -Wformat-type-confusion -Wignored-qualifiers -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtype-limits -Wno-error=tautological-type-limit-compare -Wunreachable-code -Wunreachable-code-return -Wunused-but-set-parameter -Wno-invalid-offsetof -Wclass-varargs -Wempty-init-stmt -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wno-range-loop-analysis -Wc++2a-compat -Wenum-compare-conditional -Wenum-float-conversion -Wno-ambiguous-reversed-operator -Wno-error=deprecated -Wno-error=deprecated-anon-enum-enum-conversion -Wno-error=deprecated-enum-enum-conversion -Wno-error=deprecated-pragma -Wno-error=deprecated-this-capture -Wno-error=deprecated-volatile -Wcomma -Wimplicit-fallthrough -Wstring-conversion -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=free-nonheap-object -Wno-error=atomic-alignment -Wno-error=deprecated-builtins -Wno-unknown-pragmas -Wno-unused-function -Wno-conversion-null -Wno-switch -Wno-enum-compare -Wno-psabi -Wthread-safety -Wno-unknown-warning-option -Wno-error=attributes -Werror=switch -fno-strict-aliasing -ffp-contract=off  -MD -MP -MF .deps/CubebUtils.o.pp   /builds/worker/checkouts/gecko/dom/media/CubebUtils.cpp
[task 2022-11-28T16:53:47.336Z] 16:53:47     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/dom/media'
[task 2022-11-28T16:53:47.338Z] 16:53:47     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/dom/media'
[task 2022-11-28T16:53:47.339Z] 16:53:47     INFO -  dom/media/DecoderTraits.o
[task 2022-11-28T16:53:47.340Z] 16:53:47     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/dom/media'
[task 2022-11-28T16:53:47.526Z] 16:53:47     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/dom/html'
[task 2022-11-28T16:53:47.529Z] 16:53:47     INFO -  /builds/worker/fetches/sccache/sccache /builds/worker/fetches/clang/bin/i686-w64-mingw32-clang++ -Qunused-arguments -std=gnu++17 -o Unified_cpp_dom_html4.o -c  -I/builds/worker/workspace/obj-build/dist/stl_wrappers -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -ftrivial-auto-var-init=pattern -DDEBUG=1 -DUNICODE -D_UNICODE -D_CRT_RAND_S -DCERT_CHAIN_PARA_HAS_EXTRA_FIELDS -D_SECURE_ATL -DCHROMIUM_BUILD -DU_STATIC_IMPLEMENTATION -DOS_WIN=1 -DWIN32 -D_WIN32 -D_WINDOWS -DWIN32_LEAN_AND_MEAN -DWINAPI_NO_BUNDLED_LIBRARIES -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -DSTATIC_EXPORTABLE_JS_API -I/builds/worker/checkouts/gecko/dom/html -I/builds/worker/workspace/obj-build/dom/html -I/builds/worker/workspace/obj-build/ipc/ipdl/_ipdlheaders -I/builds/worker/checkouts/gecko/ipc/chromium/src -I/builds/worker/checkouts/gecko/caps -I/builds/worker/checkouts/gecko/docshell/base -I/builds/worker/checkouts/gecko/dom/base -I/builds/worker/checkouts/gecko/dom/canvas -I/builds/worker/checkouts/gecko/dom/html/input -I/builds/worker/checkouts/gecko/dom/media -I/builds/worker/checkouts/gecko/dom/security -I/builds/worker/checkouts/gecko/dom/xul -I/builds/worker/checkouts/gecko/image -I/builds/worker/checkouts/gecko/layout/forms -I/builds/worker/checkouts/gecko/layout/generic -I/builds/worker/checkouts/gecko/layout/style -I/builds/worker/checkouts/gecko/layout/tables -I/builds/worker/checkouts/gecko/layout/xul -I/builds/worker/checkouts/gecko/netwerk/base -I/builds/worker/checkouts/gecko/parser/htmlparser -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/nss -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-build/mozilla-config.h -fno-sized-deallocation -fno-aligned-new -fms-extensions -fcrash-diagnostics-dir=/builds/worker/artifacts -D_HAS_EXCEPTIONS=0 -fno-exceptions -Wno-incompatible-ms-struct -mstackrealign -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pipe -g -gcodeview -O2 -fno-omit-frame-pointer -funwind-tables -Wall -Wbitfield-enum-conversion -Wdeprecated-this-capture -Wempty-body -Wformat-type-confusion -Wignored-qualifiers -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtype-limits -Wno-error=tautological-type-limit-compare -Wunreachable-code -Wunreachable-code-return -Wunused-but-set-parameter -Wno-invalid-offsetof -Wclass-varargs -Wempty-init-stmt -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wno-range-loop-analysis -Wc++2a-compat -Wenum-compare-conditional -Wenum-float-conversion -Wno-ambiguous-reversed-operator -Wno-error=deprecated -Wno-error=deprecated-anon-enum-enum-conversion -Wno-error=deprecated-enum-enum-conversion -Wno-error=deprecated-pragma -Wno-error=deprecated-this-capture -Wno-error=deprecated-volatile -Wcomma -Wimplicit-fallthrough -Wstring-conversion -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=free-nonheap-object -Wno-error=atomic-alignment -Wno-error=deprecated-builtins -Wno-unknown-pragmas -Wno-unused-function -Wno-conversion-null -Wno-switch -Wno-enum-compare -Wno-psabi -Wthread-safety -Wno-unknown-warning-option -fno-strict-aliasing -ffp-contract=off  -MD -MP -MF .deps/Unified_cpp_dom_html4.o.pp   Unified_cpp_dom_html4.cpp
[task 2022-11-28T16:53:47.530Z] 16:53:47     INFO -  In file included from Unified_cpp_dom_html4.cpp:47:
[task 2022-11-28T16:53:47.531Z] 16:53:47     INFO -  In file included from /builds/worker/checkouts/gecko/dom/html/HTMLTrackElement.cpp:7:
[task 2022-11-28T16:53:47.531Z] 16:53:47     INFO -  In file included from /builds/worker/workspace/obj-build/dist/include/mozilla/dom/HTMLTrackElement.h:11:
[task 2022-11-28T16:53:47.531Z] 16:53:47     INFO -  In file included from /builds/worker/workspace/obj-build/dist/include/mozilla/dom/HTMLMediaElement.h:17:
[task 2022-11-28T16:53:47.531Z] 16:53:47     INFO -  In file included from /builds/worker/workspace/obj-build/dist/include/TelemetryProbesReporter.h:10:
[task 2022-11-28T16:53:47.531Z] 16:53:47  WARNING -  /builds/worker/workspace/obj-build/dist/include/mozilla/AwakeTimeStamp.h:34:3: warning: 'dllimport' attribute ignored on inline function [-Wignored-attributes]
Regressed by: 1802798

:karogyoker2+debbug, since you are the author of the regressor, bug 1802798, could you take a look?

For more information, please visit auto_nag documentation.

Flags: needinfo?(karogyoker2+debbug)

Set release status flags based on info from the regressing bug 1802798

Assignee: nobody → karogyoker2+debbug
Status: NEW → ASSIGNED

I've added #include <cstring>.
On my local build it worked without adding it. Even when having the # if defined(__x86_64__) preprocessor directive removed.

Flags: needinfo?(karogyoker2+debbug)
Pushed by padenot@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/d4c4239cc41f
Include missing header for memset. r=padenot
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 109 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: