Bug 1802943 - Include missing header for memset. r=padenot

Differential Revision: https://phabricator.services.mozilla.com/D163281