dom/media/webaudio/blink/DenormalDisabler.h
@@ -27,6 +27,7 @@
 
 #include <cmath>
 #include <cinttypes>
+#include <cstring>
 #include <float.h>
 
 namespace WebCore {
